[package]
name = "gandigetter"
version = "0.1.0"
authors = ["Eric Danielson <eric@egd.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "0.2", features = ["full"] }